# Arkham-Horror-LCG-Collection-Organizer

./: .gitignore  AGENTS.md  CLAUDE.md  MAINTENANCE.md  README.md  collection.html  index.html
app/: SETUP-APP.md
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: main.rs
data/: catalog.js  catalog.json  icons.js
fonts/: Arkhamic-OFL.txt
mcp/: server.py
scripts/: build_campaigns.py  build_catalog.py  build_scenarios.py  download_boxart.py  download_guides.py  download_images.py  fetch_collection.py  setup.py
